insert link and add css stylesheet

--- a/index.html
+++ b/index.html
@@ -2,13 +2,25 @@
 <html> 
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset=utf-8/>
+    <title> hw-03 </title> 
 </head>
-
-
 <body>
+    <h1> hw-03: Interactive Webpage, and Marks & Channels </h1>
 
 
+
+
+
+    <h3> Acknowledgements </h3>
+    <div>
+        <ul>
+
+            <li> https://www.w3schools.com/html/html_lists_unordered.asp </li>
+            <li> https://www.w3schools.com/graphics/svg_intro.asp </li>
+        </ul>
+    </div>
 </body>
 
 </html>
