--- a/index.html
+++ b/index.html
@@ -8,17 +8,60 @@
 </head>
 <body>
     <h1> hw-03: Interactive Webpage, and Marks & Channels </h1>
+        <div class = "container">
+            <div class = "Left">
+                <img src="img/vis1.png">
+            </div>
+            <div class = "Right">
+                <h2> Marks and Channels </h2>
+                <ul>
+                    <li>
+                        Marks
+                        <ul>
+                            <li> example mark here </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Channels
+                        <ul>
+                            <li> example channel here </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
 
+            <div class = "Left">
+                <img src="img/vis2.png">
+            </div>
+            <div class = "Right">
+                <h2> Marks and Channels </h2>
+                <ul>
+                    <li>
+                        Marks
+                        <ul>
+                            <li> example mark here </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Channels
+                        <ul>
+                            <li> example channel here </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+           
 
-
+       
 
 
     <h3> Acknowledgements </h3>
     <div>
         <ul>
-
             <li> https://www.w3schools.com/html/html_lists_unordered.asp </li>
             <li> https://www.w3schools.com/graphics/svg_intro.asp </li>
+            <li> https://css-tricks.com/snippets/css/a-guide-to-flexbox/ </li>
         </ul>
     </div>
 </body>
