--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1> hw-03: Interactive Webpage, and Marks & Channels </h1>
     <div >
 
-        <button onClick="buttonClicked()" class = "center">
+        <button onClick="buttonClicked()" class = "center" id = "myBtn">
             Don't like this color? Click me for a new one!
         </button>
 
@@ -21,22 +21,22 @@
             </div>
             <div class = "Right" >
                 <h2> Marks and Channels </h2>
-                <ul>
+                <ul class = "lists">
                     <li>
                         Marks
-                        <ul>
+                        <ul class = "sublists">
                             <li> example mark here </li>
                         </ul>
                     </li>
                     <li>
                         Channels
-                        <ul>
+                        <ul class = s"ublists">
                             <li> example channel here </li>
                         </ul>
                     </li>
                     <li>
                         Colormap
-                        <ul>
+                        <ul class = "sublists">
                             <li> Attribute Here</li>
                         </ul>
                     </li>
@@ -48,7 +48,7 @@
             </div>
             <div class = "Right" >
                 <h2> Marks and Channels </h2>
-                <ul>
+                <ul class = "lists">
                     <li>
                         Marks
                         <ul>
