custom vis added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1> hw-03: Interactive Webpage, and Marks & Channels </h1>
-    <div >
+    <div>
 
         <button onClick="buttonClicked()" class = "center" id = "myBtn">
             Don't like this color? Click me for a new one!
@@ -45,6 +45,33 @@
 
             <div class = "Left">
                 <img src="img/vis2.png">
+            </div>
+            <div class = "Right" >
+                <h2> Marks and Channels </h2>
+                <ul class = "lists">
+                    <li>
+                        Marks
+                        <ul>
+                            <li> example mark here </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Channels
+                        <ul>
+                            <li> example channel here </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Colormap
+                        <ul>
+                            <li> Attribute Here</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
+            <div class = "Left">
+                <img src="img/vis3.png" class = >
             </div>
             <div class = "Right" >
                 <h2> Marks and Channels </h2>
