first half of marks/channels

--- a/index.html
+++ b/index.html
@@ -25,21 +25,24 @@
                     <li>
                         Marks
                         <ul class = "sublists">
-                            <li> example mark here </li>
+                            <li> Area (the map portion of the visualization)  </li>
+                            <li> Points (the singular electoral votes at the bottom of the image) </li>
                         </ul>
                     </li>
                     <li>
                         Channels
-                        <ul class = s"ublists">
-                            <li> example channel here </li>
+                        <ul class = "sublists">
+                            <li> Color (Hue). Color here maps to a categorical attribute: whether the states' votes were republican or democrat. This is used for both the map portion and the individual electoral vote points. Color is a great way to distinguish between the two distinct ways the states could have voted, especially because republicans are already widely associated with the color red, while democrats are equivalently associated with blue. </li>
+                            <li> Shape. Shape here maps to a categorical attribute: the individual state. The shape combined with the relative position makes it clear to anyone familiar with the map of the United States which state is being colored in. </li>
+                            <li> Length. Length here maps to a sequential numerical attribute: the total numbers of votes for democrats and republicans. The length is good here for comparing between the counts for the two parties. </li>
                         </ul>
                     </li>
                     <li>
                         Colormap
                         <ul class = "sublists">
-                            <li> Attribute Here</li>
+                            <li> The colormap here is categorical with two vastly different options for states with votes going to opposing parties. As noted above, these colors map to a categorical attribute- whether the state's electoral voted were for the republican or democratic candidate. The color map is very intuitive in this visualizations as the two selected color are already mapped in society to their respective political parties. To use any other sort of color mapping in this situation would likely feel unintuitive to the user. </li>
                         </ul>
-                    </li>
+                    </li> 
                 </ul>
             </div>
 
@@ -52,19 +55,22 @@
                     <li>
                         Marks
                         <ul>
-                            <li> example mark here </li>
+                            <li> Points </li>
                         </ul>
                     </li>
                     <li>
                         Channels
                         <ul>
-                            <li> example channel here </li>
+                            <li> Color (Hue). Color here maps to a diverging numerical attribute: the LWTS- which is negative when below the average LWTS and positive when above the average. The orange hue represents anything above 0, and purple represents anything below 0. The highly contrasting colors here are a good choice, as they clearly distinguish between the two sides of 0, and the clear white leave no confusion as to the middle ground. </li>
+                            <li> Color (Saturation). Color here maps to a diverging numerical attribute: the LWTS- which is negative when below the average LWTS and positive when above the average. The saturation of the color corresponds to HOW negative or HOW positive the LWTS score in </li>
+                            <li> Position (Horizontal). </li>
+                            <li> Position (Vertical). </li>
                         </ul>
                     </li>
                     <li>
                         Colormap
                         <ul>
-                            <li> Attribute Here</li>
+                            <li> Divergent. </li>
                         </ul>
                     </li>
                 </ul>
