--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <ul class = "sublists">
                             <li> Color (Hue). Color here maps to a categorical attribute: whether the states' votes were republican or democrat. This is used for both the map portion and the individual electoral vote points. Color is a great way to distinguish between the two distinct ways the states could have voted, especially because republicans are already widely associated with the color red, while democrats are equivalently associated with blue. </li>
                             <li> Shape. Shape here maps to a categorical attribute: the individual state. The shape combined with the relative position makes it clear to anyone familiar with the map of the United States which state is being colored in. </li>
-                            <li> Length. Length here maps to a sequential numerical attribute: the total numbers of votes for democrats and republicans. The length is good here for comparing between the counts for the two parties. </li>
+                            <li> Length. Length here maps to a sequential numerical attribute: the total numbers of votes for democrats and republicans. This occurs specifically in the bar at the top section of the visualization The length is good here for comparing between the counts for the two parties. </li>
                         </ul>
                     </li>
                     <li>
